--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">NFL-RECORDS</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">heroesmemorygame</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">VBA-Scripting</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">SQL-Challenge</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
+                            data-bs-target="#sql" href="#">SQL-Challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">infosectechnology</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">SpiritualEngineering</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">JavaScript-Challenge</a>
@@ -255,7 +256,8 @@
                     </div>
                     <div class="modal-body">
 
-                        <div class="my-4 w-75 m-auto"><img src="./assets/images/matplotlib_lab.jpg" class="w-100" alt="pandas-2"></div>
+                        <div class="my-4 w-75 m-auto"><img src="./assets/images/matplotlib_lab.jpg" class="w-100"
+                                alt="pandas-2"></div>
 
                         With access to the complete data from an animal study where 250 mice were treated through a
                         variety of drug regimes over the course of 45 days, analyzed the data to show how four
@@ -274,11 +276,73 @@
 
                         Used Pthon, Jupyter Notebook, Pandas and Matplotlib Libraries.
 
-                        <div class="my-4 w-75 m-auto"><img src="./assets/images/matplotlib_boxplot.png" class="w-100" alt="summary">
+                        <div class="my-4 w-75 m-auto"><img src="./assets/images/matplotlib_boxplot.png" class="w-100"
+                                alt="summary">
                         </div>
-                        <div class="my-4 w-75 m-auto"><img src="./assets/images/matplotlib_line.png" class="w-100" alt="pandas-5"></div>
-                        <div class="my-4 w-75 m-auto"><img src="./assets/images/matplotlib_pie.png" class="w-100" alt="pandas-6"></div>
-                        <div class="my-4 w-75 m-auto"><img src="./assets/images/matplotlib_regression.png" class="w-100" alt="pandas-1"></div>
+                        <div class="my-4 w-75 m-auto"><img src="./assets/images/matplotlib_line.png" class="w-100"
+                                alt="pandas-5"></div>
+                        <div class="my-4 w-75 m-auto"><img src="./assets/images/matplotlib_pie.png" class="w-100"
+                                alt="pandas-6"></div>
+                        <div class="my-4 w-75 m-auto"><img src="./assets/images/matplotlib_regression.png" class="w-100"
+                                alt="pandas-1"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="modal fade" id="sql" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title ms-auto" id="exampleModalLabel">SQL preview</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+
+                        Experience as a Data Engineer
+                        I did a research project on employees of a corporation from the 1980s and 1990s. All that remain
+                        of the database of employees from that period were six CSV files. I designed the tables to hold
+                        data in the CSVs, imported the CSVs into a SQL database, and answered questions about the data.
+                        In other words, performed data Modeling, data engineering and data analysis.
+
+                        * used Visual Studio Code as a code editor and applied scritpt to postgreSQL database
+                        * sketched out an ERD of the tables by exporting schema.sql to
+                        [http://www.quickdatabasediagrams.com](http://www.quickdatabasediagrams.com)
+                        * Created a histogram to visualize the most common salary ranges for employees.
+                        * Created a bar chart of average salary by title.
+                        * Created a `.sql` table schemata
+                        * Created a `.sql` file queries
+                        * Created a Jupyter Notebook
+                        * specifed data types, primary keys, foreign keys, and other constraints.
+                        * Imported each CSV file into the corresponding SQL table
+                        * Listed the following details of each employee: employee number, last name, first name, sex,
+                        and salary.
+                        * Listed first name, last name, and hire date for employees who were hired in 1986.
+                        * Listed the manager of each department with the following information: department number,
+                        department name, the manager's employee number, last name, first name.
+                        * Listed the department of each employee with the following information: employee number, last
+                        name, first name, and department name.
+                        * Listed first name, last name, and sex for employees whose first name is "Hercules" and last
+                        names begin with "B."
+                        * Listed all employees in the Sales department, including their employee number, last name,
+                        first name, and department name.
+                        * Listed all employees in the Sales and Development departments, including their employee
+                        number, last name, first name, and department name.
+                        * In descending order, listed the frequency count of employee last names, i.e., how many
+                        employees share each last name.
+                        * Imported the SQL database into Pandas
+
+
+                        <div class="row">
+                            <div class="my-4 col-md-4"><img src="./assets/images/sql_bar.png"
+                                    class="w-100" alt="sql_bar">
+                            </div>
+                            <div class="my-4 col-md-4"><img src="./assets/images/sql_hist.png"
+                                    class="w-100" alt="sql_bar">
+                            </div>
+                            <div class="my-4 col-md-4"><img src="./assets/images/sql_schema.png"
+                                    class="w-100" alt="sql_bar">
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
