--- a/index.html
+++ b/index.html
@@ -164,11 +164,12 @@
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#leaflet" href="#">Leaflet-challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">Geerooniimoo.io</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">D3-Challenge</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" href="#">plotly-challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">python-api-challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
                                 data-bs-target="#pandas" href="#">pandas-challenge</a>
-                            <a class="col-md-3 pb-2 text-decoration-none" href="#">plotly-challenge</a>
+                            <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal" data-bs-target="#d3"
+                                href="#">D3-Challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">SQLAlchemy-Challenge</a>
                             <a class="col-md-3 pb-2 text-decoration-none" href="#">Mission_To_Mars</a>
                             <a class="col-md-3 pb-2 text-decoration-none" data-bs-toggle="modal"
@@ -342,7 +343,8 @@
                             <div class="my-4 col-md-4"><img src="./assets/images/sql_bar.png" class="w-100"
                                     alt="sql_bar">
                             </div>
-                            <div class="my-4 col-md-4"><img src="./assets/images/web_2.png" class="w-100" alt="web_2">
+                            <div class="my-4 col-md-4"><img src="./assets/images/sql_hist.png" class="w-100"
+                                    alt="web_2">
                             </div>
                             <div class="my-4 col-md-4"><img src="./assets/images/sql_schema.png" class="w-100"
                                     alt="sql_bar">
@@ -413,6 +415,42 @@
                         </div>
                         <div class="row">
                             <div class="my-4 col-md-12"><img src="./assets/images/web_1.png" class="w-100" alt="web_1">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="modal fade" id="d3" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h3 class="modal-title ms-auto" id="exampleModalLabel">Inteartive Dashboard (US Census Data)
+                        </h3>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row my-4">
+                            <div class="col-md-3"></div>
+                            <div class="col-md-6"><img src="./assets/images/D3-Challenge.gif" alt="d3_gif" class="w-100"></div>
+                        </div>
+                        <p>
+                            Analyzed the current trends shaping people's lives, as well as created charts, graphs, and
+                            interactive elements to help readers understand findings. Sifting through information from
+                            the U.S. Census Bureau and the Behavioral Risk Factor Surveillance System based on 2014 ACS
+                            1-year estimates from the [US Census Bureau](https://data.census.gov/cedsci/), the current
+                            data set includes data on rates of income, obesity, poverty, etc. by state. MOE stands for
+                            "margin of error."
+                        </p>
+                        <ul>
+                            <li>Utilized **html, Javascript and D3 library** to create a scatter plot between two of the
+                                data variables such as `Healthcare vs. Poverty` or `Smokers vs. Age` that represents each
+                                state with circle elements. Pulled in the data from `data.csv` by using the `d3.csv`
+                                function. Included state abbreviations in the circles and tool-tip.</li>
+                        </ul>
+                        <div class="row mt-4">
+                            <div class="col-md-12"><img src="./assets/images/d3_1.png" class="w-100" alt="web_2">
                             </div>
                         </div>
                     </div>
